res/examples/invalid/if_else_expression_with_invalid_infix_as_then.eg
if (true) { 1 < "foo" } else { false };

// out: TypeError: mismatched types: expected type `number` but received `string`


if (true and 1) { (); } else { (); };

// out: TypeError: mismatched types: expected type `bool` but received `number`